k8s/all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pypi-server
  labels:
    app.kubernetes.io/name: pypi-server
    app.kubernetes.io/version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: pypi-server
      app.kubernetes.io/version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pypi-server
        app.kubernetes.io/version: v1
    spec:
      containers:
      - name: pypi-server
        image: gos3fs:armv8-v1
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /pypi/healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
        resources:
          requests:
            memory: "128Mi"
            cpi: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - name: http-external
          containerPort: 8080
          protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pypi-service
  labels:
    app.kubernetes.io/name: pypi-server
    app.kubernetes.io/version: v1
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pypi-server
    app.kubernetes.io/version: v1
  ports:
  - port: 8080
    targetPort: http-external
    protocol: TCP
    name: http-external
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: eol-gateway
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: eol-virtual-service
spec:
  gateways:
  - eol-gateway
  hosts:
    - "*"
  http:
  - match:
    - uri:
        prefix: /pypi/
    - uri:
        prefix: /pypi
    route:
    - destination:
        port:
          number: 8080
        host: pypi-service
